<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="28dp"
        android:paddingTop="18dp"
        android:background="@color/gray"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp">

            <ImageView
                android:id="@+id/logo_login"
                android:layout_width="150dp"
                android:layout_height="170dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="16dp"
                app:srcCompat="@drawable/login_logotipo"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/logo_login"
                android:layout_marginStart="18dp"
                android:layout_centerVertical="true"
                android:text="@string/text_login"
                android:textAppearance="@style/TextAppearance.Ec2isaac.TextBody"
                />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_login_2"
            android:layout_marginBottom="18dp"
            style="@style/TextAppearance.Ec2isaac.Title"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/login_username"
            app:endIconMode="clear_text"
            style="@style/Widget.Ec2isaac.TextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/login_password"
            app:endIconMode="password_toggle"
            style="@style/Widget.Ec2isaac.TextInputLayout"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_alignParentStart="true"
                android:text="@string/login_cancel_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_button"
                android:layout_toEndOf="@+id/login_cancel_button"
                android:layout_marginStart="20dp"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>